# book-sync

./: .gitignore  AGENTS.md  CLAUDE.md  PRD.md  README.md  cli.py  pyproject.toml
book_sync/: config.py  convert.py  download.py  feed.py  models.py  pipeline.py  search.py  transcribe.py  utils.py
