[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "book-sync"
version = "0.1.0"
description = "Convert Audiobookshelf RSS feeds into timestamped transcripts via Whisper"
requires-python = ">=3.10"
dependencies = [
    "mlx-whisper>=0.4",
    "feedparser>=6.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.scripts]
transcribe = "cli:main"
search = "cli:search_main"
